--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <!-- Ensure proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BOM Management System</title>
+  <title>Kitchen Management System</title>
   <!-- Include html2canvas for previous snapshot code if needed (currently not used) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRcdTCXce1J3DRXnPNskMsafpFYZQROfV/1z6EaWdd+20SfhJ5BjqNfB2ULmMy+jwEZiLJlg+jWkQ2kztC+g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <style>
@@ -385,7 +385,7 @@
         <button id="kitchen-logout-btn">Logout</button>
       </div>
     </header>
-    <h2>BOM Calculator</h2>
+    <h2>Pre Cook list Calculator</h2>
     <form id="bom-calc-form">
       <label for="foodItemSelect">Select Food Item:</label>
       <select id="foodItemSelect" required>
@@ -393,14 +393,14 @@
       </select>
       <label for="prodQty" id="prodQty-label">Enter Production Quantity:</label>
       <input type="number" id="prodQty" placeholder="Enter Production Quantity" required />
-      <button type="submit">Calculate BOM</button>
+      <button type="submit">Generate Item List</button>
     </form>
     <div id="bom-result"></div>
     <div id="share-container" style="display: none;">
-      <button id="share-btn">Share BOM</button>
+      <button id="share-btn">Share List</button>
       <div id="share-options" style="display: none; margin-top: 10px;">
         <button id="share-whatsapp">Share via WhatsApp</button>
-        <button id="print-bom">Print BOM</button>
+        <button id="print-bom">Print List</button>
       </div>
     </div>
   </div>
