--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
     #cook-share-btn:hover {
       background: #e0a800;
     }
+    #cook-share-whatsapp, #cook-print {
+    padding: 10px 15px;
+    background: #17a2b8;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 5px;
+    }
+    #cook-share-whatsapp:hover, #cook-print:hover {
+    background: #138496;
+    }
     .kitchen-back-btn {
       display: inline-block; margin: 20px auto; padding: 10px 20px;
       background: #6c757d; border: none; border-radius: 4px; color: #fff; cursor: pointer; font-size: 1rem;
