Firebase index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       }
     }
 
-    // Expose our functions to the global (window) object so inline scripts can access them
+    // Expose our functions to the global scope so that inline scripts can access them
     window.getBOMMastersFromFirestore = getBOMMastersFromFirestore;
     window.saveBOMMasterToFirestore = saveBOMMasterToFirestore;
     window.deleteBOMMasterFromFirestore = deleteBOMMasterFromFirestore;
@@ -922,3 +922,4 @@
   </script>
 </body>
 </html>
+
