Firebase authenticate index.html

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     apiKey: "AIzaSyAhbi8DUORRyvmF9NkupHpbwcvpKjuB22Q",
     authDomain: "bomkit-41713.firebaseapp.com",
     projectId: "bomkit-41713",
-    storageBucket: "bomkit-41713.appspot.com", 
+    storageBucket: "bomkit-41713.firebasestorage.app", 
     messagingSenderId: "1049877683664",
     appId: "1:1049877683664:web:d22ea4dbec7f62712b2dd5",
     measurementId: "G-24X6FCSGFT"
