--- a/index.html
+++ b/index.html
@@ -494,7 +494,10 @@
   };
 
   // Initialize Firebase
+  console.log("Firebase is being initialized...");
   const app = initializeApp(firebaseConfig);
+  console.log("Firebase App Initialized:", app);
+
   const auth = getAuth(app);
   const db = getFirestore(app);
 
